namespace Denik.DQEmulation.Model
{
    public interface IEnemy : ICreature, IDamageable, IDieable
    {

    }
}