namespace Denik.DQEmulation.Model
{
    public interface IPlayer : ICreature, IHealable, IDamageable, IDieable
    {

    }
}